card shift corrected

--- a/public/stylesheets/home2.css
+++ b/public/stylesheets/home2.css
@@ -225,12 +225,15 @@ img {
 	bottom: 50px;
 	position: fixed;
 	left: 0px;
+    background-color: #ffffff;
     z-index: 500;
 }
 .dock-container2 {
 	position: absolute;
+    width: 100%;
 	height: 50px;
 	padding-left: 80px;
+    background-color: white;
 }
 a.dock-item2 {
 	display: block;
@@ -407,7 +410,7 @@ svg {
     color: white;
 
 }
-#events h1{
+#events2 h1{
     position: relative;
     visibility: visible;
     color: white;
@@ -534,7 +537,7 @@ nav
 
 }
 #vit img{
-    height: 45px;
+    height: 60px;
     width: 120px;
     margin-top: 5px;
 }
@@ -887,7 +890,13 @@ li a h5{
     height: 200px;
     z-index: 99;
     position: fixed;
-    bottom: 0px;
+    bottom: 0;
     background: url("/images/bottom-fade.png") bottom center repeat-x;
 }
 
+#events2{
+    margin-bottom: 100px;
+}
+.category{
+    margin-bottom: 120px;
+}
